--- a/FirstSimpleSite/FirstSimpleSite.csproj
+++ b/FirstSimpleSite/FirstSimpleSite.csproj
@@ -75,6 +75,7 @@
     <Content Include="Content\log-fon.jpg" />
     <Content Include="Content\SampleLogo.png" />
     <Content Include="Scripts\Task1.js" />
+    <Content Include="Scripts\tree_toggle.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -95,6 +96,7 @@
       <DependentUpon>MyHandler1.ashx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\EncryptDecrypt.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="HAndlers\MyHandler1.ashx" />
