--- a/FirstSimpleSite/Web.config
+++ b/FirstSimpleSite/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SimpleDB" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=D:\Andrew\NET_Lab\Day1\FirstSimpleSite\FirstSimpleSite\App_Data\SimpleDB.mdf;Integrated Security=True;Connect Timeout=30" />
+    <add name="SimpleDB" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\SimpleDB.mdf;Integrated Security=True;Connect Timeout=30" />
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
@@ -44,7 +44,7 @@
     <add key="Ok" value="Login Success"/>
     <add key="LoginKey" value="login"/>
     <add key="PassKey" value="pass"/>
+    <add key="Token" value="authToken"/>
     <add key="UserNameCookie" value="userName"/>
-    <add key="StatusCookie" value="status"/>
   </appSettings>
 </configuration>
